<resources>
    <string name="app_name">LingCompanion</string>
    <string name="start_title">Hello!</string>
    <string name="started_sub_title">Nice to meet you! \"LingCompanion\" is an advanced English speaking practice app. With tailored exercises and AI-driven feedback, it helps users improve pronunciation, vocabulary, and grammar skills. Perfect for anyone aiming for fluency in English.</string>
    <string name="illustration_img">Illustration image</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_title">Sign in</string>
    <string name="login_sub_title">
        <font color="#393691"><b>Login</b></font>
        if you already have an account.
    </string>
    <string name="login_email">Your email or username</string>
    <string name="login_password">Your password</string>
    <string name="login_forgot_pw">Forgot password?</string>
    <string name="login_havent_account">
        I do not have an account
        <font color="#393691"><b>Register</b></font>
    </string>
    <string name="register_title">Sign up</string>
    <string name="register_sub_title">
        <font color="#393691"><b>Register</b></font>
        to get started.
    </string>
    <string name="register_fullname">Your full name</string>
    <string name="register_email">Your email</string>
    <string name="register_password">Your password</string>
    <string name="register_username">Your username</string>
    <string name="register_confirm_password">Confirm your password</string>
    <string name="register_have_account">I already have an account<font color="#393691"><b> Login</b></font></string>
    <string name="btn_logout">YES</string>

    <string name="reset_pw_title">Reset your password</string>
    <string name="reset_pw_sub_title">
        <font color="#FF8E24AA">Reset password</font>
        if you forgot your password.
    </string>
    <string name="btn_reset_pw">RESET PASSWORD</string>
    <string name="back_to_login">
        Back to
        <font color="#FF8E24AA"><b>Login</b></font>
    </string>
    <string name="title_ling_companion">Your Ling Companion</string>
    <string name="online">Online</string>
    <string name="open_nav">Open Navigation drawer</string>
    <string name="close_nav">Close Navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ling Companion</string>
    <string name="nav_header_subtitle">lingcompanion@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="title_logout">Sign out from your account</string>
    <string name="subtitle_logout">Are you sure that you want to log out?</string>
    <string name="tint_text_chat">Enter your message or tap to speech</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="title_current_password">Current Password</string>
    <string name="title_new_password">New password</string>
    <string name="title_confirm_new_password">Confirm new password</string>
    <string name="nav_dictionary">Dictionary</string>
    <string name="nav_my_words">My words</string>
    <string name="home_image">home image</string>
    <string name="text_for_interests">Feel free to select any combination of interests that appeal to you. Your selections will help us personalize your experience</string>
    <string name="save_button">Save</string>
    <string name="science_interest">Science</string>
    <string name="travel_interest">Travel</string>
    <string name="food_interest">Food</string>
    <string name="music_interest">Music</string>
    <string name="culture_interest">Culture</string>
    <string name="sport_interest">Sport</string>
    <string name="choose_your_interests_title">Choose Your Interests</string>
    <string name="advanced_level">Advanced</string>
    <string name="intermediate_level">Intermediate</string>
    <string name="beginner_level">Beginner</string>
    <string name="choose_your_english_level_title">Choose Your English Level</string>
    <string name="nav_stories">Stories</string>
    <string name="get_random_story_btn">Get Random Story</string>
    <string name="random_story">Please click the button to get a random story</string>
    <string name="play">▶</string>

</resources>