<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/nav_chat"
            android:title="@string/nav_chat" />

        <item
            android:id="@+id/nav_dictionary"
            android:icon="@drawable/nav_dictionary"
            android:title="@string/nav_dictionary" />
        <item
            android:id="@+id/nav_mywords"
            android:icon="@drawable/ic_mywords"
            android:title="@string/nav_my_words" />


        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/nav_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/nav_logout"
            android:title="@string/nav_logout" />
    </group>
</menu>