<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:padding="10dp"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/text"
        android:elevation="8dp"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_your_english_level_title"
                android:textSize="24sp"
                android:textStyle="bold"
                style="@style/titles"
                android:textColor="@color/grey_light"
                android:layout_marginBottom="16dp"/>

            <RadioGroup
                android:id="@+id/englishLevelRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/beginnerRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beginner_level"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="@style/SubTitle"
                    android:textColor="@color/grey_light"
                    />

                <RadioButton
                    android:id="@+id/intermediateRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intermediate_level"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="@style/SubTitle"
                    android:textColor="@color/grey_light" />

                <RadioButton
                    android:id="@+id/advancedRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/advanced_level"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    style="@style/SubTitle"
                    android:textColor="@color/grey_light" />
            </RadioGroup>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_interests_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        style="@style/titles"
        android:layout_marginBottom="16dp"/>

    <CheckBox
        android:id="@+id/sportCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sport_interest"
        android:textSize="20sp"
        style="@style/SubTitle"
        android:textColor="@color/grey"
        android:layout_marginBottom="8dp" />

    <CheckBox
        android:id="@+id/cultureCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/culture_interest"
        android:textSize="20sp"
        style="@style/SubTitle"
        android:textColor="@color/grey"
        android:layout_marginBottom="8dp" />

    <CheckBox
        android:id="@+id/musicCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_interest"
        android:textSize="20sp"
        style="@style/SubTitle"
        android:textColor="@color/grey"
        android:layout_marginBottom="8dp" />

    <CheckBox
        android:id="@+id/foodCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_interest"
        android:textSize="20sp"
        style="@style/SubTitle"
        android:textColor="@color/grey"
        android:layout_marginBottom="8dp" />

    <CheckBox
        android:id="@+id/travelCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travel_interest"
        android:textSize="20sp"
        style="@style/SubTitle"
        android:textColor="@color/grey"
        android:layout_marginBottom="8dp" />

    <CheckBox
        android:id="@+id/scienceCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/science_interest"
        android:textSize="20sp"
        style="@style/SubTitle"
        android:textColor="@color/grey"
        android:layout_marginBottom="8dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveButton"
        style="@style/ButtonPurple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/tv_havent_account"
        style="@style/SubTitle"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_for_interests"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</LinearLayout>
